Moved Oct 21 this week on Discord to past, added YT link.

--- a/docs/get-involved/redis-live/index-redis-live.mdx
+++ b/docs/get-involved/redis-live/index-redis-live.mdx
@@ -24,7 +24,6 @@ Check out our upcoming events:
 
 |        Date             |    Time     | Streamers                                                                                             | Show                                                                    |
 | :---------------------: | :---------: | :---------------------------------------------------------------------------------------------------- | :---------------------------------------------------------------------- |
-| Friday, October 21      | 5:00 PM UTC | [Suze Shardlow][Suze], [Savannah Norem][norem], [Simon Prickett][simon] and [Justin Castilla][justin] | [This Week On Discord][twitch]                                          |
 | Thursday, October 27    | 9:30 AM UTC | [Simon Prickett][simon]                                                                               | [Simon's Things on Thursdays - Raspberry Pi Pico W - Episode 5][twitch] |
 | Thursday, October 27    | 3:00 PM UTC | [Suze Shardlow][Suze], [Savannah Norem][norem], [Simon Prickett][simon] and [Justin Castilla][justin] | [Weekly Redis University Office Hours][officehrs]                       |
 | Friday, October 28      | 5:00 PM UTC | [Suze Shardlow][Suze], [Savannah Norem][norem], [Simon Prickett][simon] and [Justin Castilla][justin] | [This Week On Discord][twitch]                                          |
@@ -50,6 +49,7 @@ Past events:
 
 |         Date           |    Time      | Streamers                                                                                             | Show                                                                     |
 | :-------------------:  | :----------: | :---------------------------------------------------------------------------------------------------- | :----------------------------------------------------------------------- |
+| Friday, October 21     | 5:00 PM UTC  | [Suze Shardlow][Suze], [Simon Prickett][simon] and [Justin Castilla][justin]                          | [This Week On Discord][44]                                               |
 | Thursday, October 20   | 3:00 PM UTC  | [Suze Shardlow][Suze] and [Simon Prickett][simon]                                                     | [Weekly Redis University Office Hours][officehrs]                        |
 | Thursday, October 20   | 9:30 AM UTC  | [Simon Prickett][Simon]                                                                               | [Simon's Things on Thursdays - Raspberry Pi Pico W - Episode 4][43]      |
 | Wednesday, October 19  | 6:00 PM UTC  | [Steve Lorello][steve]                                                                                | [Coding with Steve: Redis OM .NET - Episode 9][42]                       |
@@ -134,6 +134,7 @@ Past events:
 [officehrs]: https://discord.com/channels/697882427875393627/981667564570706000
 
 <!-- Links to specific videos -->
+[44]: https://www.youtube.com/watch?v=K9V_TBrxAxM
 [43]: https://www.youtube.com/watch?v=MuaJzyUHmx0
 [42]: https://www.youtube.com/watch?v=GMpBlGhSucw
 [41]: https://www.youtube.com/watch?v=SOhIRenJB5g
