Updates schedule for Oct 27.

--- a/docs/get-involved/redis-live/index-redis-live.mdx
+++ b/docs/get-involved/redis-live/index-redis-live.mdx
@@ -24,8 +24,6 @@ Check out our upcoming events:
 
 |        Date             |    Time     | Streamers                                                                                             | Show                                                                    |
 | :---------------------: | :---------: | :---------------------------------------------------------------------------------------------------- | :---------------------------------------------------------------------- |
-| Tuesday, October 25     | 6:00 PM UTC | [Savannah Norem][norem]                                                                               | [savannah_streams_in_snake_case][twitch]                                |
-| Thursday, October 27    | 9:30 AM UTC | [Simon Prickett][simon]                                                                               | [Simon's Things on Thursdays - Raspberry Pi Pico W - Episode 5][twitch] |
 | Thursday, October 27    | 3:00 PM UTC | [Suze Shardlow][Suze], [Simon Prickett][simon] and [Justin Castilla][justin]                          | [Weekly Redis University Office Hours][officehrs]                       |
 | Friday, October 28      | 5:00 PM UTC | [Suze Shardlow][Suze], [Simon Prickett][simon] and [Justin Castilla][justin]                          | [This Week On Discord][twitch]                                          |
 
@@ -50,6 +48,9 @@ Past events:
 
 |         Date           |    Time      | Streamers                                                                                             | Show                                                                     |
 | :-------------------:  | :----------: | :---------------------------------------------------------------------------------------------------- | :----------------------------------------------------------------------- |
+| Thursday, October 27   | 9:30 AM UTC  | [Simon Prickett][simon]                                                                               | [Simon's Things on Thursdays - Raspberry Pi Pico W - Episode 5][47]      |
+| Wednesday, October 26  | 6:00 PM UTC  | [Steve Lorello][steve]                                                                                | [Coding with Steve: Redis OM .NET - Episode 10][46]                      |
+| Tuesday, October 25    | 6:00 PM UTC  | [Savannah Norem][norem]                                                                               | [savannah_streams_in_snake_case][45]                                     |
 | Friday, October 21     | 5:00 PM UTC  | [Suze Shardlow][Suze], [Simon Prickett][simon] and [Justin Castilla][justin]                          | [This Week On Discord][44]                                               |
 | Thursday, October 20   | 3:00 PM UTC  | [Suze Shardlow][Suze] and [Simon Prickett][simon]                                                     | [Weekly Redis University Office Hours][officehrs]                        |
 | Thursday, October 20   | 9:30 AM UTC  | [Simon Prickett][Simon]                                                                               | [Simon's Things on Thursdays - Raspberry Pi Pico W - Episode 4][43]      |
@@ -135,6 +136,9 @@ Past events:
 [officehrs]: https://discord.com/channels/697882427875393627/981667564570706000
 
 <!-- Links to specific videos -->
+[47]: https://www.youtube.com/watch?v=ypQ4bjiKeRo
+[46]: https://www.youtube.com/watch?v=n2s8yTlvGrM
+[45]: https://www.youtube.com/watch?v=q56gLAcfb4g
 [44]: https://www.youtube.com/watch?v=K9V_TBrxAxM
 [43]: https://www.youtube.com/watch?v=MuaJzyUHmx0
 [42]: https://www.youtube.com/watch?v=GMpBlGhSucw
