--- a/docs/get-involved/redis-live/index-redis-live.mdx
+++ b/docs/get-involved/redis-live/index-redis-live.mdx
@@ -24,7 +24,6 @@ Check out our upcoming events:
 
 |        Date             |    Time     | Streamers                                                                                             | Show                                                                    |
 | :---------------------: | :---------: | :---------------------------------------------------------------------------------------------------- | :---------------------------------------------------------------------- |
-| Thursday, October 27    | 3:00 PM UTC | [Suze Shardlow][Suze], [Simon Prickett][simon] and [Justin Castilla][justin]                          | [Weekly Redis University Office Hours][officehrs]                       |
 | Friday, October 28      | 5:00 PM UTC | [Suze Shardlow][Suze], [Simon Prickett][simon] and [Justin Castilla][justin]                          | [This Week On Discord][twitch]                                          |
 
   </TabItem>
@@ -48,6 +47,7 @@ Past events:
 
 |         Date           |    Time      | Streamers                                                                                             | Show                                                                     |
 | :-------------------:  | :----------: | :---------------------------------------------------------------------------------------------------- | :----------------------------------------------------------------------- |
+| Thursday, October 27   | 3:00 PM UTC  | [Suze Shardlow][Suze] and [Simon Prickett][simon]                                                     | [Weekly Redis University Office Hours][officehrs]                        |
 | Thursday, October 27   | 9:30 AM UTC  | [Simon Prickett][simon]                                                                               | [Simon's Things on Thursdays - Raspberry Pi Pico W - Episode 5][47]      |
 | Wednesday, October 26  | 6:00 PM UTC  | [Steve Lorello][steve]                                                                                | [Coding with Steve: Redis OM .NET - Episode 10][46]                      |
 | Tuesday, October 25    | 6:00 PM UTC  | [Savannah Norem][norem]                                                                               | [savannah_streams_in_snake_case][45]                                     |
