--- a/docs/get-involved/redis-live/index-redis-live.mdx
+++ b/docs/get-involved/redis-live/index-redis-live.mdx
@@ -24,7 +24,7 @@ Check out our upcoming events:
 
 |        Date             |    Time     | Streamers                                                                                             | Show                                                                    |
 | :---------------------: | :---------: | :---------------------------------------------------------------------------------------------------- | :---------------------------------------------------------------------- |
-
+| Monday, October 31      | 3:00 PM PST | [Justin Castilla][justin]                                                                             | [Do birds dream in JSON?][twitch]                                          |
   </TabItem>
   <TabItem value="recurring">
 
@@ -32,10 +32,11 @@ Sometimes we're on the road speaking at in-person events or enjoying a well-dese
 
 |    Day    |    Time     | Streamers                                                                                             | Show                                                             |
 | :-------: | :---------: | :---------------------------------------------------------------------------------------------------- | :--------------------------------------------------------------- |
+| Monday    | 3:00 PM PST | [Justin Castilla][justin]                                                                             | [Do birds dream in JSON?][twitch]                                |
 | Tuesday   | 2:00 PM ET  | [Savannah Norem][norem]                                                                               | [savannah_streams_in_snake_case][twitch]                         |
 | Wednesday | 2:00 PM ET  | [Steve Lorello][steve]                                                                                | [Coding with Steve][twitch]                                      |
 | Thursday  | 9:30 AM UTC | [Simon Prickett][simon]                                                                               | [Simon's Things on Thursdays][twitch]                            |
-| Thursday  | 3:00 PM UTC | [Suze Shardlow][Suze], [Savannah Norem][norem], [Simon Prickett][simon] and [Justin Castilla][justin] | [Weekly Redis University Office Hours][officehrs]                |
+| Thursday  | 3:00 PM UTC | [Suze Shardlow][Suze], [Savannah Norem][norem], [Simon Prickett][simon] and [Justin Castilla][justin] | [Weekly Redis University Office Hours][officehrs]                  |
 | Friday    | 5:00 PM UTC | [Suze Shardlow][Suze], [Savannah Norem][norem], [Simon Prickett][simon] and [Justin Castilla][justin] | [This Week On Discord][twitch]                                   |
 | Friday    | 2:00 PM ET  | [Guy Royse][guy]                                                                                      | [Web, Whimsy, and Redis Stack: Random Projects with Guy][twitch] |
 
