Adds Simon's stream for Nov 3.

--- a/docs/get-involved/redis-live/index-redis-live.mdx
+++ b/docs/get-involved/redis-live/index-redis-live.mdx
@@ -22,9 +22,10 @@ The Redis Developer Relations Team hosts a variety of live content on [Twitch][t
 
 Check out our upcoming events:
 
-|        Date             |    Time     | Streamers                                                                                             | Show                                                                    |
-| :---------------------: | :---------: | :---------------------------------------------------------------------------------------------------- | :---------------------------------------------------------------------- |
-| Monday, October 31      | 3:00 PM PST | [Justin Castilla][justin]                                                                             | [Do birds dream in JSON?][twitch]                                          |
+|        Date             |    Time     | Streamers                                                                                             | Show                                                                            |
+| :---------------------: | :---------: | :---------------------------------------------------------------------------------------------------- | :------------------------------------------------------------------------------ |
+| Monday, October 31      | 3:00 PM PST | [Justin Castilla][justin]                                                                             | [Do birds dream in JSON?][twitch]                                               |
+| Thursday, November 3    | 9:30 AM UTC | [Simon Prickett][simon]                                                                               | [Simon's Things on Thursdays - Cheerlights with MQTT and Redis Streams][twitch] |
   </TabItem>
   <TabItem value="recurring">
 
