--- a/docs/get-involved/redis-live/index-redis-live.mdx
+++ b/docs/get-involved/redis-live/index-redis-live.mdx
@@ -24,7 +24,6 @@ Check out our upcoming events:
 
 |        Date             |    Time     | Streamers                                                                                             | Show                                                                            |
 | :---------------------: | :---------: | :---------------------------------------------------------------------------------------------------- | :------------------------------------------------------------------------------ |
-| Monday, October 31      | 3:00 PM PST | [Justin Castilla][justin]                                                                             | [Do birds dream in JSON?][twitch]                                               |
 | Thursday, November 3    | 9:30 AM UTC | [Simon Prickett][simon]                                                                               | [Simon's Things on Thursdays - Cheerlights with MQTT and Redis Streams][twitch] |
   </TabItem>
   <TabItem value="recurring">
@@ -47,6 +46,7 @@ Past events:
 
 |         Date           |    Time      | Streamers                                                                                             | Show                                                                     |
 | :-------------------:  | :----------: | :---------------------------------------------------------------------------------------------------- | :----------------------------------------------------------------------- |
+| Monday, October 31     | 10:00 PM UTC | [Justin Castilla][justin]                                                                             | [Do birds dream in JSON?][49]                                            |
 | Friday, October 28     | 5:00 PM UTC  | [Suze Shardlow][Suze], [Simon Prickett][simon] and [Justin Castilla][justin]                          | [This Week On Discord][48]                                               |
 | Thursday, October 27   | 3:00 PM UTC  | [Suze Shardlow][Suze] and [Simon Prickett][simon]                                                     | [Weekly Redis University Office Hours][officehrs]                        |
 | Thursday, October 27   | 9:30 AM UTC  | [Simon Prickett][simon]                                                                               | [Simon's Things on Thursdays - Raspberry Pi Pico W - Episode 5][47]      |
@@ -137,6 +137,7 @@ Past events:
 [officehrs]: https://discord.com/channels/697882427875393627/981667564570706000
 
 <!-- Links to specific videos -->
+[49]: https://www.youtube.com/watch?v=xxB0zqtvBPA
 [48]: https://www.youtube.com/watch?v=8MiOm_k_YTg
 [47]: https://www.youtube.com/watch?v=ypQ4bjiKeRo
 [46]: https://www.youtube.com/watch?v=n2s8yTlvGrM
