--- a/docs/get-involved/redis-live/index-redis-live.mdx
+++ b/docs/get-involved/redis-live/index-redis-live.mdx
@@ -25,6 +25,7 @@ Check out our upcoming events:
 |        Date             |    Time     | Streamers                                                                                             | Show                                                                            |
 | :---------------------: | :---------: | :---------------------------------------------------------------------------------------------------- | :------------------------------------------------------------------------------ |
 | Thursday, November 3    | 9:30 AM UTC | [Simon Prickett][simon]                                                                               | [Simon's Things on Thursdays - Cheerlights with MQTT and Redis Streams][twitch] |
+| Thursday, November 3    | 3:00 PM UTC | [Suze Shardlow][Suze], [Savannah Norem][norem], [Simon Prickett][simon] and [Justin Castilla][justin] | [Redis University Office Hours][officehrs] |
 | Friday, November 4      | 5:00 PM UTC | [Suze Shardlow][Suze], [Savannah Norem][norem], [Simon Prickett][simon] and [Justin Castilla][justin] | [This Week On Discord][twitch] |
 | Friday, November 11     | 6:00 PM UTC | [Savannah Norem][norem] and [Justin Castilla][justin]                                                 | [This Week On Discord][twitch] |
 | Friday, November 18     | 6:00 PM UTC | [Suze Shardlow][Suze], [Savannah Norem][norem], [Simon Prickett][simon] and [Justin Castilla][justin] | [This Week On Discord][twitch] |
