Adds RUOH for 8th December.

--- a/docs/get-involved/redis-live/index-redis-live.mdx
+++ b/docs/get-involved/redis-live/index-redis-live.mdx
@@ -35,6 +35,7 @@ Check out our upcoming events:
 | Friday, November 25     | 6:00 PM UTC | [Suze Shardlow][Suze], [Savannah Norem][norem], [Simon Prickett][simon] and [Justin Castilla][justin] | [This Week On Discord][twitch] |
 | Thursday, December 1    | 4:00 PM UTC | [Suze Shardlow][Suze], [Savannah Norem][norem], [Simon Prickett][simon] and [Justin Castilla][justin] | [Redis University Office Hours][officehrs] |
 | Friday, December 2      | 6:00 PM UTC | [Suze Shardlow][Suze], [Savannah Norem][norem], [Simon Prickett][simon] and [Justin Castilla][justin] | [This Week On Discord][twitch] |
+| Thursday, December 8    | 4:00 PM UTC | [Suze Shardlow][Suze], [Savannah Norem][norem], [Simon Prickett][simon] and [Justin Castilla][justin] | [Redis University Office Hours][officehrs] |
 | Friday, December 9      | 6:00 PM UTC | [Suze Shardlow][Suze], [Savannah Norem][norem], [Simon Prickett][simon] and [Justin Castilla][justin] | [This Week On Discord][twitch] |
 | Friday, December 16     | 6:00 PM UTC | [Suze Shardlow][Suze], [Savannah Norem][norem], [Simon Prickett][simon] and [Justin Castilla][justin] | [This Week On Discord][twitch] |
 
