--- a/docs/get-involved/redis-live/index-redis-live.mdx
+++ b/docs/get-involved/redis-live/index-redis-live.mdx
@@ -24,10 +24,10 @@ Check out our upcoming events:
 
 |        Date             |    Time     | Streamers                                                                                             | Show                                                                            |
 | :---------------------: | :---------: | :---------------------------------------------------------------------------------------------------- | :------------------------------------------------------------------------------ |
-| Thursday, November 3    | 3:00 PM UTC | [Suze Shardlow][Suze], [Savannah Norem][norem], [Simon Prickett][simon] and [Justin Castilla][justin] | [Redis University Office Hours][officehrs]                                      |
 | Friday, November 4      | 5:00 PM UTC | [Suze Shardlow][Suze], [Savannah Norem][norem], [Simon Prickett][simon] and [Justin Castilla][justin] | [This Week On Discord][twitch]                                                  |
 | Thursday, November 10   | 4:00 PM UTC | [Savannah Norem][norem] and [Justin Castilla][justin]                                                 | [Redis University Office Hours][officehrs]                                      |
 | Friday, November 11     | 6:00 PM UTC | [Savannah Norem][norem] and [Justin Castilla][justin]                                                 | [This Week On Discord][twitch]                                                  |
+| Thursday, November 17   | 10:30 AM UTC| [Simon Prickett][simon]                                                                               | [Simon's Things on Thursdays: New Project][twitch]                              |
 | Thursday, November 17   | 4:00 PM UTC | [Savannah Norem][norem] and [Justin Castilla][justin]                                                 | [Redis University Office Hours][officehrs]                                      |
 | Friday, November 18     | 6:00 PM UTC | [Savannah Norem][norem] and [Justin Castilla][justin]                                                 | [This Week On Discord][twitch]                                                  |
 | Thursday, November 24   | 4:00 PM UTC | [Suze Shardlow][Suze], [Savannah Norem][norem], [Simon Prickett][simon] and [Justin Castilla][justin] | [Redis University Office Hours][officehrs]                                      |
@@ -60,6 +60,7 @@ Past events:
 
 |         Date           |    Time      | Streamers                                                                                             | Show                                                                        |
 | :-------------------:  | :----------: | :---------------------------------------------------------------------------------------------------- | :-------------------------------------------------------------------------- |
+| Thursday, November 3   | 3:00 PM UTC  | [Suze Shardlow][Suze], [Savannah Norem][norem], [Simon Prickett][simon] and [Justin Castilla][justin] | [Redis University Office Hours][officehrs]                                  |
 | Thursday, November 3   | 9:30 AM UTC  | [Simon Prickett][simon]                                                                               | [Simon's Things on Thursdays - Cheerlights with MQTT and Redis Streams][50] |
 | Monday, October 31     | 10:00 PM UTC | [Justin Castilla][justin]                                                                             | [Do birds dream in JSON?][49]                                               |
 | Friday, October 28     | 5:00 PM UTC  | [Suze Shardlow][Suze], [Simon Prickett][simon] and [Justin Castilla][justin]                          | [This Week On Discord][48]                                                  |
