--- a/docs/develop/java/spring/redis-and-spring-course/lesson_8/index-lesson_8.mdx
+++ b/docs/develop/java/spring/redis-and-spring-course/lesson_8/index-lesson_8.mdx
@@ -3,9 +3,12 @@ id: index-lesson_8
 title: 'Recommendations with RedisGraph'
 sidebar_label: Recommendations w/ RedisGraph
 slug: /develop/java/redis-and-spring-course/lesson_8
+authors: [bsb]
 ---
 
-Author: [Brian Sam-Bodden](https://twitter.com/bsbodden)
+import Authors from '@site/src/theme/Authors';
+
+<Authors frontMatter={frontMatter} />
 
 ### Objectives
 
