adding sachin as author of fraud detection doc

--- a/docs/howtos/frauddetection/index-frauddetection.mdx
+++ b/docs/howtos/frauddetection/index-frauddetection.mdx
@@ -3,9 +3,12 @@ id: index-frauddetection
 title: How to build a Fraud Detection System using Redis
 sidebar_label: How to build a Fraud Detection System using Redis
 slug: /howtos/frauddetection
+authors: [ajeet, sachin]
 ---
 
-Authors: [Sachin Kottarathodi](https://www.linkedin.com/in/ksachin1), [Ajeet Singh Raina](https://www.linkedin.com/in/ajeetsraina/)
+import Authors from '@site/src/theme/Authors';
+
+<Authors frontMatter={frontMatter} />
 
 Imagine that your ads are generating a lot of traffic, but you are not seeing the desired results from your ad spend. This might not be a coincidence—fraudsters often try to steal digital ad marketing budgets through various sophisticated mechanisms. Faking clicks can make it appear as though a real user was engaging with the ad, but in reality when these fake clicks drive installs, the cost of the install goes to the fraudster’s pocket. As companies’ willingness to spend more on digital advertisements grows, the number of fraudsters in ad markets also increases.
 
