Moved Nov 4 This Week on Discord.

--- a/docs/get-involved/redis-live/index-redis-live.mdx
+++ b/docs/get-involved/redis-live/index-redis-live.mdx
@@ -24,7 +24,6 @@ Check out our upcoming events:
 
 |        Date             |    Time     | Streamers                                                                                             | Show                                                                            |
 | :---------------------: | :---------: | :---------------------------------------------------------------------------------------------------- | :------------------------------------------------------------------------------ |
-| Friday, November 4      | 5:00 PM UTC | [Suze Shardlow][Suze], [Savannah Norem][norem], [Simon Prickett][simon] and [Justin Castilla][justin] | [This Week On Discord][twitch]                                                  |
 | Thursday, November 10   | 4:00 PM UTC | [Savannah Norem][norem] and [Justin Castilla][justin]                                                 | [Redis University Office Hours][officehrs]                                      |
 | Friday, November 11     | 6:00 PM UTC | [Savannah Norem][norem] and [Justin Castilla][justin]                                                 | [This Week On Discord][twitch]                                                  |
 | Thursday, November 17   | 10:30 AM UTC| [Simon Prickett][simon]                                                                               | [Simon's Things on Thursdays: New Project][twitch]                              |
@@ -60,6 +59,7 @@ Past events:
 
 |         Date           |    Time      | Streamers                                                                                             | Show                                                                        |
 | :-------------------:  | :----------: | :---------------------------------------------------------------------------------------------------- | :-------------------------------------------------------------------------- |
+| Friday, November 4     | 5:00 PM UTC  | [Suze Shardlow][Suze], [Savannah Norem][norem], [Simon Prickett][simon] and [Justin Castilla][justin] | [This Week On Discord][51]                                                  |
 | Thursday, November 3   | 3:00 PM UTC  | [Suze Shardlow][Suze], [Savannah Norem][norem], [Simon Prickett][simon] and [Justin Castilla][justin] | [Redis University Office Hours][officehrs]                                  |
 | Thursday, November 3   | 9:30 AM UTC  | [Simon Prickett][simon]                                                                               | [Simon's Things on Thursdays - Cheerlights with MQTT and Redis Streams][50] |
 | Monday, October 31     | 10:00 PM UTC | [Justin Castilla][justin]                                                                             | [Do birds dream in JSON?][49]                                               |
@@ -153,6 +153,7 @@ Past events:
 [officehrs]: https://discord.com/channels/697882427875393627/981667564570706000
 
 <!-- Links to specific videos -->
+[51]: https://www.youtube.com/watch?v=dhJ8NNf1l4E
 [50]: https://www.youtube.com/watch?v=j0TphaKoEVg
 [49]: https://www.youtube.com/watch?v=xxB0zqtvBPA
 [48]: https://www.youtube.com/watch?v=8MiOm_k_YTg
