fixing launchpad image links

--- a/docs/create/aws/bidding-on-aws/index-bidding-on-aws.mdx
+++ b/docs/create/aws/bidding-on-aws/index-bidding-on-aws.mdx
@@ -288,23 +288,4 @@ But thanks to Redis, the components that made up the architecture system became 
 
 [NR-Digital-Auction](https://launchpad.redis.com/?id=project%3ANR-digital-auction-frontend) is a fantastic example of how innovations can be brought to life by using Redis. Everyday programmers are experimenting with Redis to build applications that are impacting everyday life from around the world and you can too!
 
-So what can you build with Redis? For more inspiration, you can head over to the Redis Launchpad to access an exciting range of applications.
-
-Don't miss out on your $200 credit. Plus, your opportunity win a Tesla!
-
-<div>
-  <a
-    href="https://redis.com/try-free/?utm_medium=email&utm_source=marketo-followup&utm_campaign=2021-11-reinvent+try_free&mkt_tok=OTE1LU5GRC0xMjgAAAGCSARj9AY9-xGRHmR6vxemuDqU8NkDSMDTf1r8o4E7zjy58kDTzL2av6d4xogYhOqud8a4WEw6wu4rht5OHKW8M7vbp-u_cVNGYnhlQzkFr6mF"
-    target="_blank"
-    rel="noopener"
-    className="link">
-
-    <img
-      src="/img/matrix200.png"
-      className="thumb"
-      loading="lazy"
-      alt="Redis Try Free"
-    />
-
-  </a>
-</div>
+So what can you build with Redis? For more inspiration, you can head over to the [Redis Launchpad](https://launchpad.redis.com/) to access an exciting range of applications. If you're ready to get started building, quickly spin up a free database [Redis Enterprise](https://redis.com/try-free/).
