--- a/docs/develop/golang/index-golang.mdx
+++ b/docs/develop/golang/index-golang.mdx
@@ -17,7 +17,7 @@ Find tutorials, examples and technical articles that will help you to develop wi
 ## Getting Started
 
 Golang community has built many client libraries that you can find [here](https://redis.io/clients#go).
-For your first steps with Golang and Redis, this article will show how to use the recommended library: [redigo](https://github.com/gomodule/redigo).
+For your first steps with Golang and Redis, this article will show how to use the recommended library: [go-redis](https://github.com/go-redis/redis).
 
  <Tabs
   defaultValue="go-redis"
